--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       property="og:description"
       content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다."
     />
-    <meta property="og:image" content="./images/startbucks_seo.jpg" />
+    <meta property="og:image" content="./images/starbucks_seo.jpg" />
     <meta property="og:url" content="" />
 
     <!-- Twitter Card -->
@@ -27,7 +27,7 @@
       property="twitter:description"
       content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다."
     />
-    <meta property="twitter:image" content="./images/startbucks_seo.jpg" />
+    <meta property="twitter:image" content="./images/starbucks_seo.jpg" />
     <meta property="twitter:url" content="" />
 
     <!-- RESSET CSS -->
