Open Graph, Twitter Card 이미지 소스 문제 해결 소스

--- a/index.html
+++ b/index.html
@@ -7,39 +7,35 @@
     <title>Starbucks</title>
     <!-- FAVICON -->
     <link rel="icon" href="./favicon.png" />
-
-    <!-- Open Graph -->
+    <!--Open Graph : 사이트를 공유할때 노출되고 싶은 정보-->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Starbucks" />
-    <meta property="og:title" content="Starbucks Coffee Korea" />
+    <meta property="og:tite" content="Starbucks Coffee Korea" />
     <meta
       property="og:description"
       content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다."
     />
     <meta property="og:image" content="./images/starbucks_seo.jpg" />
     <meta property="og:url" content="" />
-
-    <!-- Twitter Card -->
+    <!--Twitter Card-->
     <meta property="twitter:type" content="website" />
     <meta property="twitter:site" content="Starbucks" />
-    <meta property="twitter:title" content="Starbucks Coffee Korea" />
+    <meta property="twitter:tite" content="Starbucks Coffee Korea" />
     <meta
       property="twitter:description"
       content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다."
     />
     <meta property="twitter:image" content="./images/starbucks_seo.jpg" />
     <meta property="twitter:url" content="" />
-
-    <!-- RESSET CSS -->
+    <!--RESET CSS-->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
-
-    <!-- MAIN CSS -->
+    <!--MAIN CSS-->
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <h1>Hello, Starbucks</h1>
+    <h1>Hello,Starbucks</h1>
   </body>
 </html>
