--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Open Graph : 사이트를 공유할때 노출되고 싶은 정보-->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Starbucks" />
-    <meta property="og:tite" content="Starbucks Coffee Korea" />
+    <meta property="og:title" content="Starbucks Coffee Korea" />
     <meta
       property="og:description"
       content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다."
@@ -20,11 +20,20 @@
     <!--Twitter Card-->
     <meta property="twitter:type" content="website" />
     <meta property="twitter:site" content="Starbucks" />
-    <meta property="twitter:tite" content="Starbucks Coffee Korea" />
+    <meta property="twitter:title" content="Starbucks Coffee Korea" />
     <meta
       property="twitter:description"
       content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다."
     />
+
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hahmlet:wght@400;500;600;700&family=Nanum+Gothic:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+
     <meta property="twitter:image" content="./images/starbucks_seo.jpg" />
     <meta property="twitter:url" content="" />
     <!--RESET CSS-->
@@ -36,6 +45,6 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <h1>Hello,Starbucks</h1>
+    Hello,Starbucks
   </body>
 </html>
