--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
       rel="stylesheet"
     />
 
+    <!-- ICONS -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+
     <meta property="twitter:image" content="./images/starbucks_seo.jpg" />
     <meta property="twitter:url" content="" />
     <!--RESET CSS-->
@@ -47,4 +53,6 @@
   <body>
     Hello,Starbucks
   </body>
+  <span class="material-symbols-outlined"> search </span>
+  <span class="material-symbols-outlined"> add_circle </span>
 </html>
