--- a/index.html
+++ b/index.html
@@ -51,8 +51,27 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    Hello,Starbucks
+    <!-- HEADER -->
+    <header>
+      <div class="inner">
+        <a href="#" class="logo">
+          <img src="./images/logo.png" alt="Starbucks" />
+        </a>
+
+        <!-- Sub menu -->
+        <div class="sub-menu">
+          <ul class="sub-menu__menu">
+            <li><a href="#">Sign in</a></li>
+            <li><a href="#">My Starbucks</a></li>
+            <li><a href="#">Customer Service & Ideas</a></li>
+            <li><a href="#">Fine a Store</a></li>
+          </ul>
+          <div class="search">
+            <input type="text" />
+            <span class="material-symbols-outlined"> search </span>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
-  <span class="material-symbols-outlined"> search </span>
-  <span class="material-symbols-outlined"> add_circle </span>
 </html>
