--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li><a href="#">Sign in</a></li>
             <li><a href="#">My Starbucks</a></li>
             <li><a href="#">Customer Service & Ideas</a></li>
-            <li><a href="#">Fine a Store</a></li>
+            <li><a href="#">Find a Store</a></li>
           </ul>
           <div class="search">
             <input type="text" />
