Sub menu CSS 실습 내코드&풀이코드 분석

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li><a href="#">Find a Store</a></li>
           </ul>
           <div class="search">
-            <input type="text" />
+            <input type="text" placeholder="통합검색" />
             <span class="material-symbols-outlined"> search </span>
           </div>
         </div>
