Main menu html&css 소스 코드 추가

--- a/index.html
+++ b/index.html
@@ -71,6 +71,31 @@
             <span class="material-symbols-outlined"> search </span>
           </div>
         </div>
+
+        <!-- Main menu -->
+        <ul class="main-menu">
+          <li class="item">
+            <div class="item__name">COFFEE</div>
+          </li>
+          <li class="item">
+            <div class="item__name">MENU</div>
+          </li>
+          <li class="item">
+            <div class="item__name">STORE</div>
+          </li>
+          <li class="item">
+            <div class="item__name">RESPONSIBILITY</div>
+          </li>
+          <li class="item">
+            <div class="item__name">STARBUCKS REWARDS</div>
+          </li>
+          <li class="item">
+            <div class="item__name">COPERATE SALES</div>
+          </li>
+          <li class="item">
+            <div class="item__name">WHAT'S NEW</div>
+          </li>
+        </ul>
       </div>
     </header>
   </body>
