BADGES html&css 기본 소스 추가

--- a/index.html
+++ b/index.html
@@ -374,6 +374,15 @@
           </li>
         </ul>
       </div>
+      <!-- BADGES -->
+      <div class="badges">
+        <div class="badge">
+          <img src="./images/badge_1.png" alt="현대카드 프로모션" />
+        </div>
+        <div class="badge">
+          <img src="./images/badge_2.png" alt="바리스타 채용" />
+        </div>
+      </div>
     </header>
   </body>
 </html>
