--- a/index.html
+++ b/index.html
@@ -384,5 +384,34 @@
         </div>
       </div>
     </header>
+    <!-- VISUAL -->
+    <section class="visual">
+      <div class="inner">
+        <div class="slogan">
+          <img src="./images/visual_slogan.png" alt="스타벅스 슬로건 2023" />
+          <a href="#" class="btn btn--light-green">자세히 보기</a>
+        </div>
+        <!-- 내가 쓴 코드 -->
+        <!-- <img src="./images/visual_item_1.png" alt="골든 미모사 그린 티" />
+        <img src="./images/visual_item_2.png" alt="블랙 햅쌀 고봉 라떼" />
+        <img src="./images/visual_item_3.png" alt="스타벅스 튜메릭 라떼" /> -->
+        <!-- 추가한 풀이 코드 -->
+        <img
+          src="./images/visual_item_1.png"
+          alt="골든 미모사 그린 티"
+          class="item-1"
+        />
+        <img
+          src="./images/visual_item_2.png"
+          alt="블랙 햅쌀 고봉 라떼"
+          class="item-2"
+        />
+        <img
+          src="./images/visual_item_3.png"
+          alt="스타벅스 튜메릭 라떼"
+          class="item-3"
+        />
+      </div>
+    </section>
   </body>
 </html>
