--- a/index.html
+++ b/index.html
@@ -413,5 +413,30 @@
         />
       </div>
     </section>
+    <!-- NOTICE -->
+    <section class="notice">
+      <div class="notice-line">
+        <div class="bg-left"></div>
+        <!-- 배경을 채우기 위한 가짜 div 영역-->
+        <div class="bg-right"></div>
+        <!-- 배경을 채우기 위한 가짜 div 영역-->
+        <div class="inner">
+          <div class="inner__left">
+            <h1>공지사항</h1>
+            <!-- js 적용 시, swipe를 적용하기 위해 div 태그를 사용함. -->
+            <div>탄소 중립 포인트제 실천 안내</div>
+            <a href="#">
+              <span class="material-symbols-outlined"> add_circle </span>
+            </a>
+          </div>
+          <div class="inner__right">
+            <h1>스타벅스 프로모션</h1>
+            <a href="#">
+              <span class="material-symbols-outlined"> check_circle </span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
