--- a/index.html
+++ b/index.html
@@ -474,5 +474,23 @@
         </div>
       </div>
     </section>
+    <!-- ELSALVADOR -->
+    <section class="elsalvador">
+      <div class="inner">
+        <img
+          src="./images/elsalvador_item.png"
+          alt="엘살바도르 커피"
+          class="elsalvador__item"
+        />
+        <div class="elsalvador__contents">
+          <img
+            src="./images/elsalvador_text.png"
+            alt="엘살바도르 커피 설명"
+            class="item-text"
+          />
+          <a href="#" class="btn btn--brown">자세히 보기</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
