--- a/index.html
+++ b/index.html
@@ -508,5 +508,18 @@
         <a href="#" class="btn btn--gold">자세히 보기</a>
       </div>
     </section>
+    <!-- FAVORITE -->
+    <section class="favorite">
+      <div class="inner">
+        <img src="./images/fav_text1.png" alt="FAVORITE" class="fav__title" />
+        <img
+          src="./images/fav_text2.png"
+          alt="FAVORITE"
+          class="fav__contents"
+        />
+        <img src="./images/fav_img.png" alt="FAVORITE" class="fav__imgs" />
+        <a href="#" class="btn btn--white">자세히 보기</a>
+      </div>
+    </section>
   </body>
 </html>
