--- a/index.html
+++ b/index.html
@@ -521,5 +521,21 @@
         <a href="#" class="btn btn--white">자세히 보기</a>
       </div>
     </section>
+    <!-- MAGAZINE -->
+    <section class="magazine">
+      <div class="inner">
+        <img
+          src="./images/magazine_text.png"
+          alt="MAGAZINE"
+          class="magazine__text"
+        />
+        <img
+          src="./images/magazine_img.png"
+          alt="MAGAZINE"
+          class="magazine__imgs"
+        />
+        <a href="#" class="btn btn--black">자세히 보기</a>
+      </div>
+    </section>
   </body>
 </html>
