STORE html&css 추가

--- a/index.html
+++ b/index.html
@@ -537,5 +537,41 @@
         <a href="#" class="btn btn--black">자세히 보기</a>
       </div>
     </section>
+    <!-- STORE -->
+    <section class="store">
+      <div class="inner">
+        <img
+          src="./images/store_text1.png"
+          alt="스토어 설명"
+          class="store__text-1"
+        />
+        <img
+          src="./images/store_text2.png"
+          alt="스토어 설명"
+          class="store__text-2"
+        />
+        <img
+          src="./images/store_img1.png"
+          alt="스토어 사진"
+          class="store__img-1"
+        />
+        <img
+          src="./images/store_img2.png"
+          alt="스토어 사진"
+          class="store__img-2"
+        />
+        <img
+          src="./images/store_img3.png"
+          alt="스토어 사진"
+          class="store__img-3"
+        />
+        <img
+          src="./images/store_img4.png"
+          alt="스토어 사진"
+          class="store__img-4"
+        />
+        <a href="#" class="btn btn--black">매장 찾기</a>
+      </div>
+    </section>
   </body>
 </html>
