--- a/index.html
+++ b/index.html
@@ -626,6 +626,25 @@
             <img src="./images/footer_logo.png" alt="FOOTER LOGO" />
           </div>
         </div>
+        <div class="footer__sub-menu">
+          <ul>
+            <li><a href="#">개인정보처리방침</a></li>
+            <li class="contour">|</li>
+            <li><a href="#">영상정보처리기기 운영관리 방침</a></li>
+            <li class="contour">|</li>
+            <li><a href="#">홈페이지 이용약관</a></li>
+            <li class="contour">|</li>
+            <li><a href="#">위치정보 이용약관</a></li>
+            <li class="contour">|</li>
+            <li><a href="#">스타벅스 카드 이용약관</a></li>
+            <li class="contour">|</li>
+            <li><a href="#">비회원 이용약관</a></li>
+            <li class="contour">|</li>
+            <li><a href="#">My DT Pass 서비스 이용약관</a></li>
+            <li class="contour">|</li>
+            <li><a href="#">윤리경영 핫라인</a></li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
