--- a/index.html
+++ b/index.html
@@ -645,6 +645,12 @@
             <li><a href="#">윤리경영 핫라인</a></li>
           </ul>
         </div>
+        <!-- FOOTER BTN -->
+        <div class="footer__btn">
+          <a href="#" class="btn btn--white">찾아오시는 길</a>
+          <a href="#" class="btn btn--white">신규입점제의</a>
+          <a href="#" class="btn btn--white">사이트 맵</a>
+        </div>
       </div>
     </footer>
   </body>
