--- a/index.html
+++ b/index.html
@@ -651,6 +651,13 @@
           <a href="#" class="btn btn--white">신규입점제의</a>
           <a href="#" class="btn btn--white">사이트 맵</a>
         </div>
+        <!-- FOOTER COPYLIGHT -->
+        <div class="footer__copylight">
+          <p>
+            Cloned by <span class="strong">Eun-jeong Kim</span> from Starbucks
+            Korea, © 2023 Starbucks Coffee Company. All Rights Reserved.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
