FOOTER copylight 내코드&풀이코드 분석

--- a/index.html
+++ b/index.html
@@ -655,7 +655,8 @@
         <div class="footer__copylight">
           <p>
             Cloned by <span class="strong">Eun-jeong Kim</span> from Starbucks
-            Korea, © 2023 Starbucks Coffee Company. All Rights Reserved.
+            Korea, ©<br />
+            2023 Starbucks Coffee Company. All Rights Reserved.
           </p>
         </div>
       </div>
