HEADER search js 추가(풀이코드)

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     />
     <!--MAIN CSS-->
     <link rel="stylesheet" href="./css/main.css" />
+
+    <!-- MAIN JAVASCRIPT -->
+    <script defer src="./js/main.js"></script>
   </head>
   <body>
     <!-- HEADER -->
@@ -67,7 +70,7 @@
             <li><a href="#">Find a Store</a></li>
           </ul>
           <div class="search">
-            <input type="text" placeholder="통합검색" />
+            <input type="text" />
             <span class="material-symbols-outlined"> search </span>
           </div>
         </div>
