--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
     <!--MAIN CSS-->
     <link rel="stylesheet" href="./css/main.css" />
 
-    <!-- MAIN JAVASCRIPT -->
+    <!-- JAVASCRIPT -->
+    <!-- SWIPER -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+
+    <!-- MAIN -->
     <script defer src="./js/main.js"></script>
   </head>
   <body>
