HTML - MAIN CSS 코드 적용 순서 변경

--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
-    <!--MAIN CSS-->
-    <link rel="stylesheet" href="./css/main.css" />
 
     <!-- JAVASCRIPT -->
     <!-- SWIPER -->
@@ -58,8 +56,10 @@
     />
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <!--MAIN CSS-->
+    <link rel="stylesheet" href="./css/main.css" />
 
-    <!-- MAIN -->
+    <!-- MAIN JAVASCRIPT -->
     <script defer src="./js/main.js"></script>
   </head>
   <body>
