--- a/index.html
+++ b/index.html
@@ -436,7 +436,22 @@
           <div class="inner__left">
             <h1>공지사항</h1>
             <!-- js 적용 시, swipe를 적용하기 위해 div 태그를 사용함. -->
-            <div>탄소 중립 포인트제 실천 안내</div>
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">탄소중립실천포인트제 도입 안내</div>
+                <div class="swiper-slide">
+                  영상정보처리기기 운영방침 / 위치정보 이용약관 /
+                  개인정보처리방침 이용약관 개정 안내
+                </div>
+                <div class="swiper-slide">시스템 개선 및 서비스 점검 안내</div>
+                <div class="swiper-slide">
+                  설 연휴 스타벅스 딜리버스 운영 안내
+                </div>
+                <div class="swiper-slide">
+                  스타벅스 카드 온라인 재충전 / e-Gift Card 구매 가능 금액 안내
+                </div>
+              </div>
+            </div>
             <a href="#">
               <span class="material-symbols-outlined"> add_circle </span>
             </a>
