--- a/index.html
+++ b/index.html
@@ -452,17 +452,40 @@
                 </div>
               </div>
             </div>
-            <a href="#">
+            <a href="javascript:void(0)" onclick="controlAutoPlay()">
               <span class="material-symbols-outlined"> add_circle </span>
             </a>
           </div>
           <div class="inner__right">
             <h1>스타벅스 프로모션</h1>
-            <a href="#">
-              <span class="material-symbols-outlined"> check_circle </span>
+            <a href="javascript:void(0)" class="toggle-promotion">
+              <span class="material-symbols-outlined">
+                expand_circle_down
+              </span>
             </a>
           </div>
         </div>
+      </div>
+      <div class="promotion hide">
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="./images/promotion1.jpg" alt="스타벅스 프로모션 1" />
+              <a href="#" class="btn btn--black">자세히 보기</a>
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/promotion2.jpg" alt="스타벅스 프로모션 2" />
+              <a href="#" class="btn btn--black">자세히 보기</a>
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/promotion3.jpg" alt="스타벅스 프로모션 " />
+              <a href="#" class="btn btn--black">자세히 보기</a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
       </div>
     </section>
     <!-- REWARDS -->
